# etutor-digital-ph

./: .env.example  .env.prod.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  Makefile  PRODUCTION_RAG_SETUP.md  docker-compose.prod.sira-donnia.yml  docker-compose.prod.yml  docker-compose.yml  output.txt  test_extraction_standalone.py
backend/: .dockerignore  Dockerfile  PRODUCTION_RAG_SETUP.md  alembic.ini  create_module_units_migration.py  production_indexing.py  pyproject.toml  test_courses_unskipped.py  test_pdf_extraction.py  test_rag_indexing.py
backend/app/: main.py
backend/app/ai/: claude_service.py  model_registry.py  pdf_summarizer.py  qbank_slide_extractor.py
backend/app/api/: deps.py  deps_local_auth.py
backend/app/data/: seed_units.py  seeder.py
backend/app/integrations/: mms_tts.py  nllb.py  nllb_translate.py  supabase_auth.py
backend/app/tasks/: celery_app.py  content_generation.py  data_etl.py  file_cleanup.py  heygen_poll.py  image_extraction.py  image_indexation.py  image_translation.py  media_generation.py  preassessment_generation.py  qbank_processing.py  quality_assessment.py  rag_indexation.py  rag_indexing.py  resource_extraction.py  sms_relay.py  subscription.py  syllabus_generation.py
backend/data/extracted/: donaldson_chapters.json  scutchfield_chapters.json  triola_chapters.json
backend/docs/: jwt-auth-strategy.md
backend/migrations/: env.py
backend/migrations/versions/: 001_add_totp_mfa_auth_tables.py  001_initial_schema.py  002_rls_policies.py  003_seed_modules.py  004_pgvector_document_chunks.py  (+142 more)
backend/scripts/: backfill_chunk_resource_ids.py  backfill_last_interacted.py  backfill_legacy_figure_numbers.py  create_hnsw_index.py  extract_pdfs.py  rag_pipeline.py  regenerate_audio.py  seed_e2e_users.py  seed_units_from_syllabus.py
backend/supabase/: config.sql
backend/tests/: conftest.py  test_activation_code_service.py  test_admin_courses_helpers.py  test_admin_quality_access.py  test_admin_rag.py  test_admin_rate_limits.py  test_audience_detection.py  test_backfill_chunk_resource_ids.py  test_backfill_clean_flowchart_svgs.py  test_backfill_complex_diagram_overlays.py  test_backfill_figure_kinds.py  test_backfill_image_translations.py  test_backfill_legacy_figure_numbers.py  test_billing.py  test_case_study_service.py  test_celery_redis_fix.py  test_certificate_service.py  test_citation_formatter.py  test_claude_service.py  test_complex_overlay.py  test_content_reviewer.py  test_content_status_endpoint.py  test_cost_tracker.py  test_course_management_service.py  test_courses.py  test_credit_service.py  test_email_smtp.py  test_enrollment_helper.py  test_expert_courses.py  test_figure_classifier.py  test_figure_translator.py  test_file_upload.py  test_flashcard_generation.py  test_flashcards_upcoming_no_sub.py  test_generated_image_model.py  test_health.py  test_heygen_agent_mode.py  test_heygen_client.py  test_heygen_poller.py  test_image_extractor.py  (+71 more)
(+711 files in other folders)
