[project]
name = "backend"
version = "0.1.0"
description = "SantePublique AOF - FastAPI backend for adaptive public health learning platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.86.0",
    "aiobotocore>=3.4.0",
    "botocore>=1.35.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.9",
    "celery[redis]>=5.6.3",
    "click>=8.1.7",
    "flower>=2.0.1",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "numpy>=1.26.0",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "tiktoken>=0.8.0",
    "uvicorn[standard]>=0.42.0",
    "bcrypt>=4.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "aiosmtplib>=3.0.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "google-cloud-texttospeech>=2.29.0",
    "reportlab>=4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "B904", "E712"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["E501"]
"scripts/**" = ["E501"]
"tests/**" = ["E501"]
"app/domain/services/**" = ["E501"]
"app/api/**" = ["E501"]
"app/ai/prompts/**" = ["E501"]
"app/data/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
